# CFDC_embedded

./: .gitignore  README.md
firmware/: .cproject  .cproject.bak  .gitignore  .mxproject  .project  .project.bak  CDC_libUSB_basic Debug (1).launch  CDC_libUSB_basic Debug.cfg  CDC_libUSB_basic Debug.launch  CDC_libUSB_basic.ioc  Makefile  README.md  STLINK.cfg  STLINK.launch  STM32-for-VSCode.config.yaml  STM32G431CBUX_FLASH.ld  STM32G431CBUx_FLASH.ld  STM32Make.make  Segger.launch  openocd.cfg
firmware/Debug/: CDC_libUSB_basic.elf  CDC_libUSB_basic.list  CDC_libUSB_basic.map  makefile  objects.list
firmware/Drivers/CMSIS/Include/: core_cm3.h  (+2 more)
firmware/Inc/: RING.h  bootloader.h  dwt_delay.h  fdcan.h  jump_to_boot.h  main.h  ring.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h  ucan_fd_protocol_stm32g431.h  usb_device.h  usbd_cdc_if.h  usbd_conf.h  usbd_desc.h
firmware/Src/: RING.c  bootloader.c  dwt_delay.c  fdcan.c  gpio.c  jump_to_boot.c  main.c  main.c.orig  ring.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  ucan_fd_protocol_stm32g431.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c  usbd_desc.c
gsusb_firmware/budgetcan_fw/: README.md
pcb/: .gitignore  README.md
pcb/main/: cfuc.lib  fp-info-cache  main  main-cache.lib  main.kicad_pcb  main.pro  main.sch  main.sch-bak  main_GS2.kicad_mod  sym-lib-table
tools/: CFUC_Upload.sh  README.md  python_can_CFUC_rx.py  python_can_CFUC_tx.py
tools/examples/: python_can_CFUC_UDS.py  python_can_CFUC_rx.py  python_can_CFUC_tx.py
tools/uCAN_CAN_Viewer/: README.md  pyproject.toml
tools/uCAN_CAN_Viewer/tests/: test_ucan_can_viewer.py
(+24 files in other folders)
